--- a/src/pages/Live/Live.less
+++ b/src/pages/Live/Live.less
@@ -6,6 +6,7 @@
   .div1 {
     background: blue;
     .item1 {
+      margin-top: 0.6rem;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -52,7 +53,10 @@
       margin-top: 0.5rem;
       height: 5.3333rem;
       padding: 0 0.2rem;
-      background: red;
+      img {
+        height: 100%;
+        width: 100%;
+      }
     }
     .item5 {
       padding: 0.4rem 0.6133rem;
@@ -70,6 +74,55 @@
       font-weight:400;
       color:rgba(102,102,102,1);
       line-height:0.4933rem;
+    }
+    .item7 {
+      padding: 0.4rem 0;
+      text-align: center;
+      img {
+        height: 1.3333rem;
+        width: 1.3333rem;
+      }
+    }
+    .item8 {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height:0.8267rem;
+      font-size:0.5867rem;
+      font-weight:600;
+      line-height:0.8267rem;
+    }
+    .item9 {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: linear-gradient(to right, #FFDE5D , #FF70A9);
+      border-radius: .5867rem;
+      font-size: .2933rem;
+      width: 2.3467rem;
+      height: .5867rem;
+      margin: 0.4rem auto;
+    }
+    .item10 {
+      height: 0.8rem;
+      padding: 0 0.4rem;
+      img{
+        height: 100%;
+        float: left;
+      }
+      d1 {
+        float: right;
+        width: 1.7333rem;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size:0.4rem;
+        font-weight:600;
+        line-height:0.56rem;
+        border-radius:0.8rem;
+        background: #402E4C;
+      }
     }
   }
   .div2 {
