--- a/src/pages/Live/Live.less
+++ b/src/pages/Live/Live.less
@@ -35,14 +35,14 @@
         height:0.56rem;
         font-size:0.4rem;
         font-weight:500;
-        width: 1.6rem;
+        // width: 1.6rem;
         float: left;
         margin-left: 0.6rem;
       }
       .p2 {
         height:0.88rem;
         line-height: 0.88rem;
-        width: 4.2267rem;
+        // width: 4.2267rem;
         font-size:0.7467rem;
         font-weight:bold;
         float: left;
@@ -94,13 +94,13 @@
     }
     .item9 {
       display: flex;
-      align-items: center;
-      justify-content: center;
-      background: linear-gradient(to right, #FFDE5D , #FF70A9);
-      border-radius: .5867rem;
-      font-size: .2933rem;
-      width: 2.3467rem;
-      height: .5867rem;
+      // align-items: center;
+      // justify-content: center;
+      // background: linear-gradient(to right, #FFDE5D , #FF70A9);
+      // border-radius: .5867rem;
+      // font-size: .2933rem;
+      width: 1.3333rem;
+      height: 0.5867rem;
       margin: 0.4rem auto;
     }
     .item10 {
@@ -169,15 +169,17 @@
       }
       .p3 {
         margin-left: 0.1333rem;
-        font-size: .2933rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background: linear-gradient(to right, #FFDE5D , #FF70A9);
-        border-radius: 0.2667rem;
-        width: 1.9467rem;
+        // font-size: .2933rem;
+        // display: flex;
+        // align-items: center;
+        // justify-content: center;
+        // background: linear-gradient(to right, #FFDE5D , #FF70A9);
+        // border-radius: 0.2667rem;
+        // width: 1.9467rem;
+        // height: 0.5867rem;
+        // border-radius: 0.2667rem;
+        width: 1.3333rem;
         height: 0.5867rem;
-        border-radius: 0.2667rem;
       }
     }
   }
