--- a/src/pages/Live/Live.less
+++ b/src/pages/Live/Live.less
@@ -4,7 +4,29 @@
   width: 100%;
   color: white;
   .div1 {
-    background: blue;
+    .bglive {
+      background-image: url("../../assets/bg-live.png");
+      background-position: 50%;
+      background-repeat: no-repeat;
+      background-size: auto 100%;
+      -webkit-transform-origin: center top;
+      transform-origin: center top;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      z-index: -1;
+      -webkit-transition: opacity .3s linear;
+      transition: opacity .3s linear;
+      filter: blur(12px);
+    }
+    .bglive:after {
+      content: " ";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,.5);
+    }
     .item1 {
       margin-top: 0.6rem;
       display: flex;
@@ -64,17 +86,7 @@
       font-weight:400;
       line-height:0.4933rem;
     }
-    .item6 {
-      background: #F2F2F2;
-      padding-left: 0.5333rem;
-      display: flex;
-      align-items: center;
-      height:0.8rem;
-      font-size:0.3467rem;
-      font-weight:400;
-      color:rgba(102,102,102,1);
-      line-height:0.4933rem;
-    }
+    
     .item7 {
       padding: 0.4rem 0;
       text-align: center;
@@ -110,7 +122,7 @@
         height: 100%;
         float: left;
       }
-      d1 {
+      .d1 {
         float: right;
         width: 1.7333rem;
         height: 100%;
@@ -124,6 +136,17 @@
         background: #402E4C;
       }
     }
+  }
+  .item6 {
+    background: #F2F2F2;
+    padding-left: 0.5333rem;
+    display: flex;
+    align-items: center;
+    height:0.8rem;
+    font-size:0.3467rem;
+    font-weight:400;
+    color:rgba(102,102,102,1);
+    line-height:0.4933rem;
   }
   .div2 {
     height: 2.4667rem;
@@ -169,6 +192,7 @@
       }
       .p3 {
         margin-left: 0.1333rem;
+        background-image: url('../../assets/play_live.png');
         // font-size: .2933rem;
         // display: flex;
         // align-items: center;
@@ -180,6 +204,12 @@
         // border-radius: 0.2667rem;
         width: 1.3333rem;
         height: 0.5867rem;
+        background-size: 100% 100%;
+        float: right;
+        color: white;
+        line-height: 0.5867rem;
+        font-size: 0.2933rem;
+        text-align: center;
       }
     }
   }
