--- a/src/pages/Share/Share.less
+++ b/src/pages/Share/Share.less
@@ -66,6 +66,12 @@
           margin-bottom: 0;
         }
       }
+      .list3{
+        height:0.96rem;
+        img {
+          height: 100%;
+        }
+      }
       .unselected {
         .list1 {
           color:rgba(0,0,0,1);
@@ -92,7 +98,7 @@
   .fix1 {
     position: fixed;
     bottom: 0;
-    background: rgba(102, 102, 102, 0.8);
+    background: rgba(0, 0, 0, 0.5);
     padding: 0.5333rem 0 1.0667rem 0.5333rem;
     display: flex;
     align-items: center;
