--- a/src/pages/Share/VideoShare.less
+++ b/src/pages/Share/VideoShare.less
@@ -3,11 +3,45 @@
 .main {
   width: 100%;
   height: 100%;
-  background: url("../../assets/bg-share.jpg") no-repeat fixed;
-  background-size: 100% 100%;
+  min-height: 1200px;
+  // background: url("../../assets/bg-share.jpg") no-repeat fixed;
+  // background-size: 100% 100%;
   padding:1px;
   box-sizing:border-box;
   z-index:1;
+  .main1 {
+    // width: 100%;
+    // height: 100%;
+    // position: absolute;
+    // z-index: -1;
+    // opacity: .8;
+    // filter: blur(7px);
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    -webkit-transform: scale(1.5);
+    transform: scale(1.5);
+    -webkit-transform-origin: center top;
+    transform-origin: center top;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    height: 100%;
+    overflow: hidden;
+    z-index: -1;
+    -webkit-transition: opacity .3s linear;
+    transition: opacity .3s linear;
+    filter: blur(12px);
+  }
+  .mengban {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+    opacity: .7;
+    background: gray;
+  }
   .div1 {
     // height: 7.7067rem;
     .img1 {
@@ -52,7 +86,7 @@
   .fix1 {
     position: fixed;
     bottom: 0;
-    background: rgba(102, 102, 102, 0.8);
+    background: rgba(0, 0, 0, 0.3);
     padding: 0.5333rem 0 1.0667rem 0.5333rem;
     display: flex;
     align-items: center;
