--- a/src/pages/Live/Live.less
+++ b/src/pages/Live/Live.less
@@ -59,7 +59,7 @@
         font-weight:500;
         // width: 1.6rem;
         float: left;
-        margin-left: 0.45rem;
+        margin-left: 0.25rem;
       }
       .p2 {
         height:0.88rem;
@@ -68,7 +68,7 @@
         font-size:0.7467rem;
         font-weight:bold;
         float: left;
-        margin-left: 0.45rem;
+        margin-left: 0.25rem;
       }
     }
     .item4 {
@@ -78,6 +78,7 @@
       img {
         height: 100%;
         width: 100%;
+        border-radius: 0.1333rem;
       }
     }
     .item5 {
@@ -155,6 +156,7 @@
       height: 100%;
       img {
         height: 100%;
+        border-radius: 0.1333rem;
       }
     }
     .playCol {
@@ -191,7 +193,7 @@
         line-height:0.4rem;
       }
       .p3 {
-        margin-left: 0.1333rem;
+        margin-right: 0.7333rem;
         background-image: url('../../assets/play_live.png');
         // font-size: .2933rem;
         // display: flex;
