--- a/src/pages/Share/PlayShare.less
+++ b/src/pages/Share/PlayShare.less
@@ -54,6 +54,7 @@
       width: 7.8933rem;
       display: flex;
       margin: 1.3333rem 1.0667rem 0.4rem;
+      border-radius: 0.2667rem;
     }
     .item1 {
       height:0.7467rem;
@@ -65,7 +66,7 @@
       margin-bottom: 0.7467rem;
     }
     .item2 {
-      margin-top: 1.0667rem;
+      margin-top: 0.8rem;
       height:0.4rem;
       font-size:0.2933rem;
       font-weight:400;
@@ -82,11 +83,16 @@
         background-color: red;
         height: 100%;
       }
+      .buffer {
+        background-color: gray;
+        height: 100%;
+        position: absolute;
+      }
     }
     .img2 {
       width: 1.3333rem;
       display: flex;
-      margin: 0 auto;
+      margin: 0.1333rem auto 0;
     }
   }
   .fix1 {
