--- a/src/pages/Share/Share.less
+++ b/src/pages/Share/Share.less
@@ -8,6 +8,7 @@
       width: 4.8rem;
       display: flex;
       margin: 0.2667rem auto;
+      border-radius: 0.13333rem;
     }
     .item1 {
       font-size:0.5333rem;
