--- a/src/pages/Share/VideoShare.less
+++ b/src/pages/Share/VideoShare.less
@@ -48,6 +48,7 @@
       width: 7.8933rem;
       display: flex;
       margin: 1.3333rem 1.0667rem 0.4rem;
+      border-radius: 0.2667rem;
     }
     .item1 {
       height:0.7467rem;
