--- a/src/pages/Live/Live.less
+++ b/src/pages/Live/Live.less
@@ -53,13 +53,13 @@
       display: flex;
       align-items: center;
       border-radius: 0.6rem;
+      justify-content: center;
       .p1 {
         height:0.56rem;
         font-size:0.4rem;
         font-weight:500;
         // width: 1.6rem;
-        float: left;
-        margin-left: 0.25rem;
+        // margin-left: 0.25rem;
       }
       .p2 {
         height:0.88rem;
@@ -67,8 +67,7 @@
         // width: 4.2267rem;
         font-size:0.7467rem;
         font-weight:bold;
-        float: left;
-        margin-left: 0.25rem;
+        margin-left: 0.4rem;
       }
     }
     .item4 {
