--- a/src/pages/Share/VideoShare.less
+++ b/src/pages/Share/VideoShare.less
@@ -34,6 +34,15 @@
     transition: opacity .3s linear;
     filter: blur(12px);
   }
+  .main1:after {
+    content: " ";
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    background-color: rgba(0,0,0,.5);
+  }
   .mengban {
     width: 100%;
     height: 100%;
