--- a/src/pages/Share/Share.less
+++ b/src/pages/Share/Share.less
@@ -57,6 +57,7 @@
           color:rgba(0,0,0,1);
           line-height:0.56rem;
           margin-bottom: 0.08rem;
+          overflow: hidden;
         }
         .p2 {
           height:0.4rem;
