--- a/src/pages/Live/Live.less
+++ b/src/pages/Live/Live.less
@@ -5,30 +5,33 @@
   color: white;
   .div1 {
     .bglive {
-      background-image: url("../../assets/bg-live.png");
-      background-position: 50%;
-      background-repeat: no-repeat;
-      background-size: auto 100%;
-      -webkit-transform-origin: center top;
-      transform-origin: center top;
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      z-index: -1;
-      -webkit-transition: opacity .3s linear;
-      transition: opacity .3s linear;
-      filter: blur(12px);
+      background-image: url("../../assets/bg_bg_live.png");
+      padding: 0.6rem 0 0.5rem;
+      background-size: 100% 100%;
+      // background-position: 50%;
+      // background-repeat: no-repeat;
+      // background-size: auto 100%;
+      // -webkit-transform-origin: center top;
+      // transform-origin: center top;
+      // position: absolute;
+      // width: 100%;
+      // height: 100%;
+      // overflow: hidden;
+      // z-index: -1;
+      // -webkit-transition: opacity .3s linear;
+      // transition: opacity .3s linear;
+      
+      // filter: blur(12px);
     }
-    .bglive:after {
-      content: " ";
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0,0,0,.5);
-    }
+    // .bglive:after {
+    //   content: " ";
+    //   position: absolute;
+    //   width: 100%;
+    //   height: 100%;
+    //   background-color: rgba(0,0,0,.5);
+    // }
     .item1 {
-      margin-top: 0.6rem;
+      // margin-top: 0.6rem;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -49,6 +52,7 @@
       height: 1.2rem;
       margin-left: 1.1333rem;
       margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
       background: linear-gradient(to right, #EB032C , #FE007D);
       display: flex;
       align-items: center;
@@ -65,13 +69,13 @@
         height:0.88rem;
         line-height: 0.88rem;
         // width: 4.2267rem;
-        font-size:0.7467rem;
+        font-size:0.72rem;
         font-weight:bold;
         margin-left: 0.4rem;
       }
     }
     .item4 {
-      margin-top: 0.5rem;
+      
       height: 5.3333rem;
       padding: 0 0.2rem;
       img {
