--- a/src/pages/Live/Live.less
+++ b/src/pages/Live/Live.less
@@ -122,13 +122,27 @@
     .item10 {
       height: 0.8rem;
       padding: 0 0.4rem;
+      .wave {
+        height: 100%;
+        width: 2.5rem;
+        float: left;
+        display: flex;
+        align-items: center;
+        .wave1 {
+          float: left;
+          width: 0.08rem;
+          background: rgba(255, 255, 255, 0.3);
+          border-radius: 0.04rem; 
+          margin-left: 0.3rem;
+        }
+      }
       img{
         height: 100%;
         float: left;
       }
       .d1 {
         float: right;
-        width: 1.7333rem;
+        width: 2.5rem;
         height: 100%;
         display: flex;
         align-items: center;
