--- a/src/pages/Live/Live.less
+++ b/src/pages/Live/Live.less
@@ -210,7 +210,7 @@
         line-height:0.4rem;
       }
       .p3 {
-        margin-right: 0.7333rem;
+        margin-left: 0.3rem;
         background-image: url('../../assets/play_live.png');
         // font-size: .2933rem;
         // display: flex;
@@ -224,7 +224,7 @@
         width: 1.3333rem;
         height: 0.5867rem;
         background-size: 100% 100%;
-        float: right;
+        float: left;
         color: white;
         line-height: 0.5867rem;
         font-size: 0.2933rem;
