--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>芒果动听</title>
   <link rel="icon" href="/favicon.png" type="image/x-icon">
-  <!-- <script src="https://gw.alipayobjects.com/os/antv/pkg/_antv.data-set-0.9.6/dist/data-set.min.js"></script> -->
+  <script src='http://tdbucketdefault.oss-cn-shanghai.aliyuncs.com/web/jquery-3.3.1.min.js'></script>
+  <script src='http://tdbucketdefault.oss-cn-shanghai.aliyuncs.com/web/base.js'></script>
   <!-- <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script> -->
 </head>
 <body>
