--- a/src/pages/ZhiFou/List.less
+++ b/src/pages/ZhiFou/List.less
@@ -1,8 +1,11 @@
-@import '~antd/lib/style/themes/default.less';
+@import '~@/utils/utils.less';
 
 .main {
   width: 100%;
-  z-index:1;
+  min-height: 100%;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
   .main1 {
     background-position: 50%;
     background-repeat: no-repeat;
@@ -32,99 +35,229 @@
     background-color: rgba(0,0,0,.5);
   }
   .div1 {
-    // height: 7.7067rem;
+    height: 5.4933rem;
+    padding-top: 0.96rem;
+    padding-left: 0.5333rem;
+    padding-right: 0.5333rem;
+    display: flex;
     .img1 {
       width: 3.2rem;
       height: 3.2rem;
-      display: flex;
-      margin: 0.2667rem auto;
       border-radius: 0.13333rem;
     }
     .item1 {
-      font-size:0.5333rem;
-      font-weight:500;
-      line-height:0.7467rem;
-      color:rgba(0,0,0,1);
-      text-align: center;
+      flex: 1;
+      padding-left: 0.4533rem;
+      padding-top: 0.4rem;
+      .p1 {
+        overflow: hidden;
+        height:0.5867rem;
+        font-size:0.4267rem;
+        font-weight:500;
+        color:rgba(255,255,255,1);
+        line-height:0.5867rem;
+      }
+      .p2 {
+        overflow: hidden;
+        margin-top: 0.32rem;
+        height:0.4533rem;
+        font-size:0.32rem;
+        font-weight:400;
+        color:rgba(255,255,255,1);
+        line-height:0.4533rem;
+      }
+      .p3 {
+        overflow: hidden;
+        margin-top: 0.16rem;
+        height:0.9067rem;
+        font-size:0.32rem;
+        font-weight:400;
+        color:rgba(255,255,255,1);
+        line-height:0.4533rem;
+      }
     }
-    .item2 {
-      margin-top: 0.12rem;
-      height:0.4rem;
-      font-size:0.2933rem;
-      font-weight:400;
-      color:rgba(102,102,102,1);
-      line-height:0.4rem;
-      text-align: center;
-    }
+  }
+  .div2 {
+    flex: 1;
+    margin-top: -0.5333rem;
+    border-radius:0.5333rem 0.5333rem 0rem 0rem;
+    background: #FFFFFF;
+    border: 1px solid white;
     .item3 {
-      margin-top: 0.6667rem;
-      background: #F2F2F2;
-      padding-left: 0.5333rem;
+      margin-top: 0.5867rem;
+      display: flex;
+      margin-left: 0.5333rem;
+      margin-right: 0.5333rem;
+      overflow-x: auto;
+      .title {
+        width:2.2933rem;
+        height:1.0933rem;
+        margin-right: 0.3333rem;
+        font-size:0.48rem;
+        font-weight:400;
+        color:rgba(0,0,0,1);
+        position: relative;
+        .border {
+          width:0.8533rem;
+          height:0.08rem;
+          background:linear-gradient(17deg,rgba(255,114,128,1) 0%,rgba(255,31,123,1) 100%);
+          border-radius:0.04rem;
+          bottom: 0;
+          left: 0.5467rem;
+          position: absolute;
+        }
+        .name {
+          width: 1.9467rem;
+          line-height: 0.6667rem;
+          height: 0.6667rem;
+          .textOverflow();
+        }
+      }
+    }
+    .play {
+      border-top: 1px solid #E3E3E3;
+      padding: 0 0.5333rem;
+      height: 1.5467rem;
       display: flex;
       align-items: center;
-      height:0.8rem;
-      font-size:0.3467rem;
-      font-weight:400;
-      color:rgba(102,102,102,1);
-      line-height:0.4933rem;
+      .all {
+        flex: 1;
+        height:0.5867rem;
+        font-size:0.4267rem;
+        font-weight:400;
+        color:rgba(0,0,0,1);
+        line-height:0.5867rem;
+      }
     }
     .item4 {
-      padding: 0.56rem 0 0.56rem 0;
-      .list1 {
-        padding-left: 0.5333rem;
-        padding-top: 0.18rem;
-        height:0.64rem;
-        font-size:0.4533rem;
-        font-weight:600;
-        color:rgba(0,0,0,1);
-        line-height:0.64rem;
+      padding: 0 0.5333rem;
+      border-top: 1px solid #E3E3E3;
+      height: 1.8133rem;
+      display: flex;
+      align-items: center;
+      .index {
+        width: 0.64rem;
+        font-size: 0.48rem;
+        margin-right: 0.2333rem;
+        font-weight:500;
+        color:rgba(102,102,102,1);
       }
-      .list2 {
-        .p1 {
-          height:0.56rem;
+      .detail {
+        flex: 1;
+        .name {
+          height:0.5333rem;
           font-size:0.4rem;
           font-weight:400;
           color:rgba(0,0,0,1);
-          line-height:0.56rem;
-          margin-bottom: 0.08rem;
-          overflow: hidden;
+          line-height:0.5333rem;
+          .textOverflow();
         }
-        .p2 {
-          height:0.4rem;
+        .mark {
+          margin-top: 0.1867rem;
+          display: flex;
+          height:0.2667rem;
           font-size:0.2933rem;
           font-weight:400;
           color:rgba(102,102,102,1);
-          line-height:0.4rem;
-          margin-bottom: 0;
-        }
-      }
-      .list3{
-        height:0.96rem;
-        img {
-          height: 100%;
-        }
-      }
-      .unselected {
-        .list1 {
-          color:rgba(0,0,0,1);
-        }
-        .list2 {
-          .p1 {
-            color:rgba(0,0,0,1);
+          line-height:0.2667rem;
+          .duration {
+            margin-left: 0.16rem;
+          }
+          .count {
+            margin-left: 0.16rem;
           }
         }
       }
-      .selected {
-        border-left: 2px solid red;
-        .list1 {
-          color:#EB032A;
+    }
+    .item40 {
+      padding: 0 0.5333rem;
+      border-top: 1px solid #E3E3E3;
+      height: 1.8133rem;
+      display: flex;
+      align-items: center;
+      .index {
+        width: 0.64rem;
+        font-size: 0.48rem;
+        margin-right: 0.2333rem;
+        font-weight:500;
+        color:#D8D8D8;
+      }
+      .detail {
+        flex: 1;
+        .name {
+          height:0.5333rem;
+          font-size:0.4rem;
+          font-weight:400;
+          color:#D8D8D8;
+          line-height:0.5333rem;
+          .textOverflow();
         }
-        .list2 {
-          .p1 {
-            color:#EB032A;
+        .mark {
+          margin-top: 0.1867rem;
+          display: flex;
+          height:0.2667rem;
+          font-size:0.2933rem;
+          font-weight:400;
+          color:#D8D8D8;
+          line-height:0.2667rem;
+          .duration {
+            margin-left: 0.16rem;
+          }
+          .count {
+            margin-left: 0.16rem;
           }
         }
       }
+    }
+  }
+  .tanchuang {
+    width: 9.1467rem;
+    height: 9.6533rem;
+    left: 0.4267rem;
+    top: 2.88rem;
+    position: absolute;
+    background-size: 100%;
+    padding-top: 1.7867rem;
+    .title {
+      font-size:0.4rem;
+      font-weight:500;
+      color:rgba(0,0,0,1);
+      line-height:0.56rem;
+      padding-left: 1.84rem;
+      padding-bottom: 0.4267rem;
+      border-bottom: 1px solid #E2E2E2;
+    }
+    .content {
+      font-size:0.32rem;
+      font-weight:400;
+      color:rgba(0,0,0,1);
+      line-height:0.5333rem;
+      padding-top: 0.2933rem;
+      padding-left: 1.12rem;
+      padding-right: 1.2rem;
+      display: flex;
+      img {
+        width: 0.4267rem;
+        height: 0.4267rem;
+      }
+      .detail {
+        flex: 1;
+        padding-left: 0.2933rem;
+      }
+    }
+    .close {
+      font-size: 0.44rem;
+      color: white;
+      padding-top: 0.3rem;
+      text-align: center;
+      position: absolute;
+      bottom: 1.5rem;
+      left: 3.9733rem;
+      width: 1.28rem;
+      height: 1.28rem;
+      border-radius: 1.28rem;
+      background:linear-gradient(45deg,rgba(255,127,128,1) 0%,rgba(255,13,123,1) 100%);
+      box-shadow:0rem 0.0533rem 0.2667rem -0.0267rem rgba(255,46,124,0.24);
     }
   }
 }
