--- a/src/pages/Live/singer/LastList.less
+++ b/src/pages/Live/singer/LastList.less
@@ -3,8 +3,8 @@
   color: white;
   background: #171A26;
   .div1 {
-    padding-top: 0.64rem;
     padding-left: 0.56rem;
+    margin-bottom: 0.64rem;
     .title {
       padding-bottom: 0.4267rem;
       font-size:0.4267rem;
