--- a/src/pages/Live/singer/Live.less
+++ b/src/pages/Live/singer/Live.less
@@ -3,37 +3,46 @@
   min-height: 100%;
   color: white;
   background: #171A26;
+  .imgBg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    height: 10.2133rem;
+    width: 100%;
+    z-index: 1;
+  }
   .mask {
     position: absolute;
     left: 0;
     top: 0;
     right: 0;
     bottom: 0;
-    height: 8.96rem;
+    height: 10.2133rem;
     width: 100%;
-    background: rgba(0,0,0,.4);
+    background: rgba(9,9,9,.4);
     filter:blur(1px);
     z-index: 1;
   }
   .div1 {
+    z-index: 2;
     position: relative;
-    height: 8.96rem;
+    height: 10.2133rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url("../../../assets/singer/bg1.png");
-    background-size: 100% 100%;
+    // background-image: url("../../../assets/singer/bg1.png");
+    // background-size: 100% 100%;
     .img1 {
       width: 1.52rem;
       height: 1.36rem;
-      z-index: 2;
     }
     .img2 {
       position: absolute;
       bottom: 0;
       width: 100%;
       height: 1.2rem;
-      z-index: 2;
     }
     .item1 {
       position: absolute;
@@ -43,7 +52,6 @@
       font-size:0.5867rem;
       font-weight:600;
       line-height:1.04rem;
-      z-index: 2;
     }
     .item2 {
       position: absolute;
@@ -53,12 +61,12 @@
       font-size:0.4267rem;
       font-weight:600;
       line-height:1.04rem;
-      z-index: 2;
     }
   }
   .div2 {
     padding-left: 0.56rem;
     padding-bottom: .56rem;
+    margin-top: 1.3067rem;
     .item4 {
       display: flex;
       align-items: center;
