--- a/src/pages/Live/singer/PreLive.less
+++ b/src/pages/Live/singer/PreLive.less
@@ -3,12 +3,35 @@
   min-height: 100%;
   color: white;
   background: #171A26;
+  .imgBg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    height: 10.2133rem;
+    width: 100%;
+    z-index: 1;
+  }
+  .mask {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    height: 10.2133rem;
+    width: 100%;
+    background: rgba(9,9,9,.4);
+    filter:blur(1px);
+    z-index: 1;
+  }
   .div1 {
+    z-index: 2;
     position: relative;
-    height: 8.96rem;
-    background-image: url("../../../assets/singer/bg1.png");
-    background-size: 100% 100%;
-    padding-top: 4.64rem;
+    height: 10.2133rem;
+    // background-image: url("../../../assets/singer/bg1.png");
+    // background-size: 100% 100%;
+    padding-top: 6.9867rem;
     .item1 {
       padding-left: 0.9333rem;
       height: 1.04rem;
@@ -17,6 +40,7 @@
       line-height:1.04rem;
     }
     .item3 {
+      margin-top: 0.2267rem;
       .bg1 {
         width: 9.68rem;
         height: 2.9333rem;
@@ -65,6 +89,7 @@
   .div2 {
     padding-left: 0.56rem;
     padding-bottom: .56rem;
+    margin-top: 1.3067rem;
     .item4 {
       display: flex;
       align-items: center;
