--- a/src/pages/Live/singer/Live.less
+++ b/src/pages/Live/singer/Live.less
@@ -66,11 +66,11 @@
   .div2 {
     padding-left: 0.56rem;
     padding-bottom: .56rem;
-    margin-top: 1.3067rem;
+    margin-top: 0.64rem;
     .item4 {
       display: flex;
       align-items: center;
-      margin-top: 0.64rem;
+      // margin-top: 0.64rem;
       img {
         width: 0.4rem;
         height: 0.4rem;
