--- a/src/pages/ZhiFou/List.less
+++ b/src/pages/ZhiFou/List.less
@@ -50,7 +50,6 @@
       padding-left: 0.4533rem;
       padding-top: 0.4rem;
       .p1 {
-        overflow: hidden;
         height:0.5867rem;
         font-size:0.4267rem;
         font-weight:500;
@@ -58,7 +57,6 @@
         line-height:0.5867rem;
       }
       .p2 {
-        overflow: hidden;
         margin-top: 0.32rem;
         height:0.4533rem;
         font-size:0.32rem;
@@ -145,6 +143,7 @@
       .detail {
         flex: 1;
         .name {
+          width: 8rem;
           height:0.5333rem;
           font-size:0.4rem;
           font-weight:400;
@@ -160,6 +159,9 @@
           font-weight:400;
           color:rgba(102,102,102,1);
           line-height:0.2667rem;
+          .time {
+            min-width: 1.6267rem;
+          }
           .duration {
             margin-left: 0.16rem;
           }
@@ -186,6 +188,7 @@
         flex: 1;
         .name {
           height:0.5333rem;
+          width: 8rem;
           font-size:0.4rem;
           font-weight:400;
           color:#D8D8D8;
@@ -200,6 +203,9 @@
           font-weight:400;
           color:#D8D8D8;
           line-height:0.2667rem;
+          .time {
+            min-width: 1.6267rem;
+          }
           .duration {
             margin-left: 0.16rem;
           }
