歌手样式修改

--- a/src/pages/Live/singer/End.less
+++ b/src/pages/Live/singer/End.less
@@ -46,6 +46,7 @@
       font-size:0.4267rem;
       font-weight:600;
       line-height:1.04rem;
+      color: rgba(255,255,255,.8);
     }
     .item3 {
       margin-top: 0.48rem;
@@ -64,14 +65,14 @@
           height: 0.4rem;
         }
         .title {
-          padding-left: 0.2rem;
-          padding-right: 0.2rem;
+          padding-left: 0.5067rem;
+          padding-right: 0.5067rem;
           height:0.6667rem;
           font-size:0.48rem;
           font-weight:600;
           color:rgba(249,195,212,1);
           line-height:0.6667rem;
-          letter-spacing:0.0667rem;
+          letter-spacing:0.26666rem;
         }
       }
     }
