--- a/src/pages/Live/singer/LastList.less
+++ b/src/pages/Live/singer/LastList.less
@@ -10,7 +10,7 @@
       font-size:0.4267rem;
       font-weight:600;
       line-height:0.5867rem;
-      letter-spacing:0.0133rem;
+      letter-spacing:0.0266rem;
     }
     .list {
       width: 100%;
@@ -38,11 +38,12 @@
         .intro {
           margin-top: 0.32rem;
           width:4.2667rem;
-          height:0.7467rem;
+          // height:0.7467rem;
           font-size:0.2933rem;
           font-weight:500;
-          line-height:0.3733rem;
+          line-height:0.4267rem;
           overflow: hidden;
+          color:rgba(255,255,255,.5);
         }
       }
     }
