--- a/src/pages/Live/singer/PreLive.less
+++ b/src/pages/Live/singer/PreLive.less
@@ -42,10 +42,10 @@
     .item3 {
       margin-top: 0.2267rem;
       .bg1 {
-        width: 9.68rem;
-        height: 2.9333rem;
+        width: 10rem;
+        height: 3.04rem;
         margin-top: 0.1067rem;
-        margin-left: 0.16rem;
+        // margin-left: 0.16rem;
         background-image: url("../../../assets/singer/rec1.png");
         background-size: 100% 100%;
         display: flex;
@@ -56,15 +56,15 @@
           font-weight:600;
           color:rgba(255,255,255,1);
           line-height:0.64rem;
-          letter-spacing:0.0267rem;
+          letter-spacing:0.0533rem;
           span {
             color: #F70A68;
           }
         }
         .item3_2 {
-          margin-left: 0.5333rem;
+          margin-left: 0.4267rem;
           height:0.8533rem;
-          font-size:0.6133rem;
+          font-size:0.5333rem;
           font-weight:600;
           line-height:0.8533rem;
           display: flex;
@@ -80,7 +80,14 @@
           .devide {
             color: #F60754;
             text-align: center;
+            width:0.2rem;
+          }
+          .dd {
             width:0.4267rem;
+            height:0.1067rem;
+            margin: 0.3467rem 0.0533rem 0;
+            background:linear-gradient(180deg,rgba(251,17,141,1) 0%,rgba(246,7,84,1) 100%);
+            border-radius:0.0533rem;
           }
         }
       }
