--- a/src/pages/Live/singer/Ready.less
+++ b/src/pages/Live/singer/Ready.less
@@ -46,6 +46,7 @@
       font-size:0.4267rem;
       font-weight:600;
       line-height:1.04rem;
+      color: rgba(255,255,255,.8);
       z-index: 2;
     }
     .item3 {
@@ -76,6 +77,7 @@
           .time {
             width:0.5067rem;
             height:0.96rem;
+            line-height:0.96rem;
             background:rgba(246,7,84,1);
             border-radius:0.1333rem;
             flex: 1;
@@ -113,9 +115,10 @@
     .item5 {
       padding-top: 0.32rem;
       padding-right: 0.5867rem;
-      height:1.6rem;
+      height:1.92rem;
       font-size:0.32rem;
       font-weight:500;
+      color:rgba(255,255,255,1);
       line-height:0.5333rem;
     }
     .item6 {
@@ -130,10 +133,12 @@
       align-items: center;
       justify-content: center;
       img {
+        z-index: 2;
         width: 1.36rem;
         height: 1.2267rem;
       }
       .title {
+        z-index: 2;
         position: absolute;
         bottom: 0.3733rem;
         left: 0.3733rem;
@@ -142,6 +147,19 @@
         font-weight:600;
         line-height:0.5867rem;
       }
+    }
+    .mask {
+      position: absolute;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      width: 8.8533rem;
+      background: rgba(9, 9, 9, 0.4);
+      -webkit-filter: blur(1px);
+      filter: blur(1px);
+      z-index: 1;
+      height: 4.4533rem;
     }
     .item7 {
       padding-top: 0.32rem;
