--- a/src/components/DownloadTip/index.less
+++ b/src/components/DownloadTip/index.less
@@ -2,12 +2,14 @@
   position: fixed;
   bottom: 0;
   background: rgba(0, 0, 0, 0.3);
-  padding: 0.5333rem 0 0.5667rem 0.5333rem;
+  padding: 0.48rem 0.64rem 0.5667rem 0.48rem;
   display: flex;
   align-items: center;
   width: 100%;
+  height: 2.0267rem;
   img {
-    height: 1.3333rem;
+    width: 1.36rem;
+    height: 1.36rem;
   }
   .close {
     position: absolute;
@@ -16,21 +18,35 @@
     color: #fff;
   }
   .p1 {
-    height:0.9867rem;
-    font-size:0.3467rem;
-    font-weight:500;
+    margin-left: 0.2133rem;
     color:rgba(255,255,255,1);
-    line-height:0.4933rem;
+    flex: 1;
+    .d1 {
+      height: 0.4rem;
+      width: 1.8133rem;
+    }
+    .d2 {
+      margin-top: 0.1867rem;
+      height:0.4267rem;
+      font-size:0.2933rem;
+      font-weight:100;
+      color:rgba(255,255,255,1);
+      line-height:0.4267rem;
+      letter-spacing:0.0133rem;
+    }
   }
   .p2{
-    width:2rem;
-    height:0.8rem;
-    font-size:0.3467rem;
-    font-weight:500;
+    font-size:0.4rem;
+    font-weight:600;
     color:rgba(255,255,255,1);
-    line-height:0.8rem;
-    background: #EE023A;
+    line-height:0.56rem;
     border-radius: 0.8rem; 
-    text-align: center; 
+    width:3.12rem;
+    height:1.0933rem;
+    background:linear-gradient(44deg,rgba(255,127,128,1) 0%,rgba(255,13,123,1) 100%);
+    box-shadow:0px 4px 20px -2px rgba(255,37,124,0.33);
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
