--- a/src/pages/Live/singer/Ready.less
+++ b/src/pages/Live/singer/Ready.less
@@ -30,13 +30,13 @@
     position: relative;
     height: 10.2133rem;
     padding-top: 5.9733rem;
-    .fmlogo {
-      position: absolute;
-      left: 7.84rem;
-      top: 7.2533rem;
-      width: 1.52rem;
-      height: 1.2267rem;
-    }
+    // .fmlogo {
+    //   position: absolute;
+    //   left: 7.84rem;
+    //   top: 7.2533rem;
+    //   width: 1.52rem;
+    //   height: 1.2267rem;
+    // }
     // background-image: url("../../../assets/singer/bg1.png");
     // background-size: 100% 100%;
     .item1 {
