--- a/src/components/DownloadTip/index.less
+++ b/src/components/DownloadTip/index.less
@@ -1,5 +1,5 @@
 .fix1 {
-  position: fixed;
+  position: absolute;
   bottom: 0;
   background: rgba(0, 0, 0, 0.3);
   padding: 0.48rem 0.64rem 0.5667rem 0.48rem;
