--- a/src/pages/ZhiFou/List.less
+++ b/src/pages/ZhiFou/List.less
@@ -1,6 +1,7 @@
 @import '~@/utils/utils.less';
 
 .main {
+  position: relative;
   width: 100%;
   min-height: 100%;
   z-index: 1;
@@ -222,16 +223,30 @@
     left: 0.4267rem;
     top: 2.88rem;
     position: absolute;
-    background-size: 100%;
+    background-size: 100% 100%;
     padding-top: 1.7867rem;
-    .title {
-      font-size:0.4rem;
-      font-weight:500;
-      color:rgba(0,0,0,1);
-      line-height:0.56rem;
-      padding-left: 1.84rem;
-      padding-bottom: 0.4267rem;
+    .head {
       border-bottom: 1px solid #E2E2E2;
+      padding-bottom: 0.4267rem;
+      .title {
+        font-size:0.4rem;
+        font-weight:500;
+        color:rgba(0,0,0,1);
+        line-height:0.56rem;
+        padding-left: 1.84rem;
+      }
+      .subhead {
+        // overflow: hidden;
+        // text-overflow: ellipsis;
+        // white-space: nowrap;
+        padding-left: 1.84rem;
+        padding-top: 0.16rem;
+        padding-right: 1.2rem;
+        font-size:0.32rem;
+        font-weight:400;
+        color:rgba(102,102,102,1);
+        line-height:0.4533rem;
+      }
     }
     .content {
       font-size:0.32rem;
