--- a/src/pages/ZhiFou/Player.less
+++ b/src/pages/ZhiFou/Player.less
@@ -3,7 +3,8 @@
 /* stylelint-disable */
 .main {
   width: 100%;
-  height: 100%;
+  min-height: 17.7867rem;
+  position: relative;
   padding:1px;
   box-sizing:border-box;
   z-index:1;
