--- a/src/pages/ZhiFou/List.less
+++ b/src/pages/ZhiFou/List.less
@@ -66,6 +66,7 @@
         line-height:0.4533rem;
       }
       .p3 {
+        position: relative;
         overflow: hidden;
         margin-top: 0.16rem;
         height:0.9067rem;
@@ -73,6 +74,11 @@
         font-weight:400;
         color:rgba(255,255,255,1);
         line-height:0.4533rem;
+        .icon {
+          position:absolute;
+          right: 0.1333rem;
+          bottom: 0.08rem;
+        }
       }
     }
   }
@@ -140,6 +146,7 @@
         margin-right: 0.2333rem;
         font-weight:500;
         color:rgba(102,102,102,1);
+        text-align: center;
       }
       .detail {
         flex: 1;
