--- a/src/pages/ZhiFou/Player.less
+++ b/src/pages/ZhiFou/Player.less
@@ -52,7 +52,7 @@
   }
   .div1 {
     // height: 7.7067rem;
-    padding-top: 1.8267rem;
+    // padding-top: 1.8267rem;
     .img1 {
       width: 7.8933rem;
       display: flex;
