--- a/src/pages/ZhiFou/List.less
+++ b/src/pages/ZhiFou/List.less
@@ -108,11 +108,11 @@
           background:linear-gradient(17deg,rgba(255,114,128,1) 0%,rgba(255,31,123,1) 100%);
           border-radius:0.04rem;
           bottom: 0;
-          left: 0.5467rem;
+          left: 0.79rem;
           position: absolute;
         }
         .name {
-          width: 1.9467rem;
+          width: 2.4333rem;
           line-height: 0.6667rem;
           height: 0.6667rem;
           .textOverflow();
@@ -162,11 +162,11 @@
         .mark {
           margin-top: 0.1867rem;
           display: flex;
-          height:0.2667rem;
+          height:0.32rem;
           font-size:0.2933rem;
           font-weight:400;
           color:rgba(102,102,102,1);
-          line-height:0.2667rem;
+          line-height:0.32rem;
           .time {
             min-width: 1.6267rem;
           }
@@ -191,6 +191,7 @@
         margin-right: 0.2333rem;
         font-weight:500;
         color:#D8D8D8;
+        text-align: center;
       }
       .detail {
         flex: 1;
@@ -206,11 +207,11 @@
         .mark {
           margin-top: 0.1867rem;
           display: flex;
-          height:0.2667rem;
+          height:0.32rem;
           font-size:0.2933rem;
           font-weight:400;
           color:#D8D8D8;
-          line-height:0.2667rem;
+          line-height:0.32rem;
           .time {
             min-width: 1.6267rem;
           }
@@ -233,10 +234,14 @@
     background-size: 100% 100%;
     padding-top: 1.7867rem;
     .head {
-      border-bottom: 1px solid #E2E2E2;
-      padding-bottom: 0.4267rem;
-      padding-left: 1.84rem;
-      padding-right: 1.2rem;
+      padding-left: 0.6133rem;
+      padding-right: 0.5333rem;
+      .border {
+        padding-left: 1.2267rem;
+        padding-right: 0.6667rem;
+        padding-bottom: 0.4267rem;
+        border-bottom: 1px solid #E2E2E2;
+      }
       .title {
         font-size:0.4rem;
         font-weight:500;
@@ -270,6 +275,8 @@
       .detail {
         flex: 1;
         padding-left: 0.2933rem;
+        height: 3.1467rem;
+        overflow-y: auto;
       }
     }
     .close {
