--- a/src/components/TimeLine/index.less
+++ b/src/components/TimeLine/index.less
@@ -31,6 +31,13 @@
         border-radius: 10px;
         background: red;
         cursor: pointer;
+        .dd {
+          position: relative;
+          width: 30px;
+          height: 30px;
+          left: -10px;
+          top: -10px;
+        }
       }
       .buffer {
         background-color: rgba(255,255,255,.2);
