--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -8,7 +8,7 @@
   <link rel="icon" href="/favicon.png" type="image/x-icon">
   <script src='http://tdbucketdefault.oss-cn-shanghai.aliyuncs.com/web/jquery-3.3.1.min.js'></script>
   <script src='http://tdbucketdefault.oss-cn-shanghai.aliyuncs.com/web/base.js'></script>
-  <!-- <script src='http://tdbucketdefault.oss-cn-shanghai.aliyuncs.com/web/vconsole.min.js?v=3.2.0'></script> -->
+  <script src='http://tdbucketdefault.oss-cn-shanghai.aliyuncs.com/web/vconsole.min.js?v=3.2.0'></script>
   <!-- <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script> -->
 </head>
 <body>
@@ -17,6 +17,6 @@
 </body>
 <script>
 // 初始化vConsole
-// window.vConsole = new window.VConsole();
+window.vConsole = new window.VConsole();
 </script>
 </html>
