--- a/src/pages/ZhiFou/List.less
+++ b/src/pages/ZhiFou/List.less
@@ -98,7 +98,7 @@
         width:2.4rem;
         height:1.0933rem;
         margin-right: 0.3333rem;
-        font-size:0.48rem;
+        font-size:0.4267rem;
         font-weight:400;
         color:rgba(0,0,0,1);
         position: relative;
@@ -116,6 +116,7 @@
           line-height: 0.6667rem;
           height: 0.6667rem;
           .textOverflow();
+          color: #666666;
         }
       }
     }
