--- a/src/pages/NewYear/singer/Live.less
+++ b/src/pages/NewYear/singer/Live.less
@@ -92,6 +92,7 @@
       font-size:0.32rem;
       font-weight:500;
       line-height:0.5333rem;
+      color: rgba(23,26,38,1);
     }
     .item6 {
       position: relative;
