--- a/src/pages/NewYear/singer/Ready.less
+++ b/src/pages/NewYear/singer/Ready.less
@@ -132,7 +132,7 @@
       height:4.4533rem;
       margin-top: 0.64rem;
       border-radius:0.16rem;
-      background-image: url("../../../assets/newyear/voice.png");
+      // background-image: url("../../../assets/newyear/voice.png");
       background-size: 100% 100%;
       display: flex;
       align-items: center;
@@ -177,6 +177,7 @@
       font-size:0.32rem;
       font-weight:500;
       line-height:0.5333rem;
+      color: #171a26;
     }
   }
 }
