--- a/src/pages/NewYear/singer/Live.less
+++ b/src/pages/NewYear/singer/Live.less
@@ -100,7 +100,7 @@
       height:4.4533rem;
       margin-top: 0.64rem;
       border-radius:0.16rem;
-      background-image: url("../../../assets/newyear/voice.png");
+      // background-image: url("../../../assets/newyear/voice.png");
       background-size: 100% 100%;
       display: flex;
       align-items: center;
@@ -110,6 +110,14 @@
         width: 100%;
         height: 100%;
       }
+    }
+    .item7 {
+      padding-top: 0.32rem;
+      padding-right: 0.5333rem;
+      font-size:0.32rem;
+      font-weight:500;
+      line-height:0.5333rem;
+      color: #171a26;
     }
   }
 }
