--- a/src/pages/Live/singer/Ready.less
+++ b/src/pages/Live/singer/Ready.less
@@ -122,7 +122,7 @@
     .item5 {
       padding-top: 0.32rem;
       padding-right: 0.5867rem;
-      height:1.92rem;
+      // height:1.92rem;
       font-size:0.32rem;
       font-weight:500;
       color:rgba(255,255,255,1);
