--- a/src/pages/ZhiFou/List.less
+++ b/src/pages/ZhiFou/List.less
@@ -117,6 +117,7 @@
           height: 0.6667rem;
           .textOverflow();
           color: #666666;
+          text-align: center;
         }
       }
     }
