--- a/src/pages/ZhiFou/List.less
+++ b/src/pages/ZhiFou/List.less
@@ -153,7 +153,7 @@
       .detail {
         flex: 1;
         .name {
-          width: 8rem;
+          // width: 8rem;
           height:0.5333rem;
           font-size:0.4rem;
           font-weight:400;
@@ -199,7 +199,7 @@
         flex: 1;
         .name {
           height:0.5333rem;
-          width: 8rem;
+          // width: 8rem;
           font-size:0.4rem;
           font-weight:400;
           color:#D8D8D8;
